src/objects/Finance__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Finance</relationshipLabel>
        <relationshipName>Finance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRR__c</fullName>
        <formula>Account__r.WISAFI__Sales_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Comments__c</fullName>
        <label>Finance Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Finance</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Finance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>